--- a/m1/w1/d4/esercitazione 26.10/index.html
+++ b/m1/w1/d4/esercitazione 26.10/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <div id="centro">
+  <header>
     <!--logo-->
     <div>
     <img src="img\logo.png" alt="logo sito">
@@ -16,8 +18,9 @@
     <hr>
 
     <div>
-    <p class="verde">Part of <span id="maiuscolo">a simply fabulous thanksgiving</span></p>
+    <p class="header">Part of <span class="maiuscolo">a simply fabulous thanksgiving</span></p>
     </div>
+  </header>
 
    <main>
     <!--titolo-->
@@ -36,20 +39,19 @@
     </video>
 
     <figure class="grigio">Image:Sally Vegas</figure>
+</div>
 
-    <h2 class="rosso" id="second-font">Featured in:</h2>
+    <h3 class="rosso maiuscolo" id="second-font">Featured in:</h3>
     <a href="#">Fresh Cranberry Recipes Tat Go Beyond Sauce</a>
 
-    <!--ingredienti-->
+    <!--titolo ingredienti-->
     <h2>Ingredients</h2>
 
-    <hr>
-
-    <!--ingredienti focaccia-->
+    <!--lista ingredienti focaccia-->
     <div>
         
-        <h4>For the focaccia:</h4>
-
+        <h3>For the focaccia:</h3>
+      
         <ul>
             <li>4 cups (500g) all-purpose flour</li>
             <li>1 1/2 teaspoons instant yeast</li>
@@ -59,10 +61,10 @@
         </ul>
     </div>
 
-    <!--ingedienti topping-->
+    <!--lista ingedienti topping-->
     <div>
 
-        <h4>For the topping:</h4>
+        <h3>For the topping:</h3>
 
         <ul>
             <li>3 medium yellow onions, thinly sliced</li>
@@ -79,9 +81,12 @@
     <hr>
 
     <div>
+
+        <div>
         <ol>
             <li><strong>Make the focaccia dough</strong></li>
         </ol>
+        </div>
 
         <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the dough ingredients until the flour is fully absorbed. You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...</p>
     </div>
