--- a/m1/w1/d5/progetto settimanale 27.10/mobile/index.html
+++ b/m1/w1/d5/progetto settimanale 27.10/mobile/index.html
@@ -4,44 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!--descrizione sito-->
     <meta name="description" content="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi.">
+
     <!--titolo pagina-->
     <title>Corso Web Developer - Epicode school</title>
+
     <!--collegamento file reset-->
     <link rel="stylesheet" href="css/reset.css">
     <!--collegamento file css-->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!--collegamento google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+
+    <!--collegamento fontawesome-->
     <script src="https://kit.fontawesome.com/26878e6cc8.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <header class="margin-b">
 
+    <!--logo-->
     <div class="sfondo-nero">
-    <img id="immagine-1" src="/m1/w1/d5/progetto settimanale 27.10/images/logo.png" alt="logo epicode school">
+    <img id="immagine-1" src="/images/logo.png" alt="logo epicode school">
     </div>
 
+     <!--immagine opaca-->
     <div class="sfondo-immagine">
 
-        <h1 id="font-h1" class="blu bold interlinea">Corso Web Developer</h1> <br>
-
+        <!--titolo-->
+        <h1 id="font-h1" class="blu bold interlinea">Corso Web Developer</h1>
+ 
+        <!--primo paragrafo pagina-->
         <p class="padding margin-b">Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
 
-
-        <a id="font-button" class="button maiuscolo" href="#"> Partiamo! </a></button>
+        <!--link pulsante-->
+        <a id="font-button" class="button maiuscolo" href="partiamo.html" target="_blank"> Partiamo! </a></button>
 
     </div>
 
     </header>
 
  <main>
+
+    <!--prime due sezioni pagina-->
     <section class="margin-b">
 
         <h3 class="font-h3 bold blu">Tutti ti cercheranno</h3>
@@ -54,10 +67,12 @@
 
     </section>
 
+    <!--immagine nel cerchio-->
     <div class="margin-b">
-        <img id="img-cerchio" src="/m1/w1/d5/progetto settimanale 27.10/images/notebook.jpg" alt="immagine computer con teleono">
+        <img id="img-cerchio" src="/images/notebook.jpg" alt="immagine computer con telefono">
     </div>
 
+    <!--sezioni dopo immagine con cerchio-->
     <section class="margin-b">
 
         <h3 class="font-h3 bold blu">Scegli il tuo ruolo</h3>
@@ -74,55 +89,78 @@
 
     </section>
 
+    <!--testimonianza-->
     <section class="sfondo-arancione margin-b">
 
+        <!--titolo testimonianza-->
         <h2 id="epi-gar" class="bianco bold margin-b">Epicode garantisce</h2>
 
+        <!--paragrafo testimonianza-->
         <p class="bianco italic margin-b">"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</p>
 
+        <!--autore testimonianza-->
         <cite id="ceo" class="bianco">Mario Rossi</cite>
         <p class="bianco">CEO, Epicode</p>
 
     </section>
 
-     <section class="border margin-b">
-
-        <img class="w-img" src="/m1/w1/d5/progetto settimanale 27.10/images/foto1.jpg" alt="computer con luci colorate">
-
-        <h4 class="font-h4 bold blu">Il tuo pc</h4>
-
-        <p class="padding">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
-
-     </section>
-
+    <!--prima sezione dopo testimonianza-->
     <section class="border margin-b">
 
-        <img class="w-img" src="/m1/w1/d5/progetto settimanale 27.10/images/foto2.jpg" alt="computer su scrivania">
+        <!--immagine sezione-->
+        <img class="w-img" src="/images/foto2.jpg" alt="computer con luci colorate">
 
+        <!--titolo sezione-->
         <h4 class="font-h4 bold blu">Il tuo pc</h4>
 
+        <!--paragrafo sezione-->
+        <p class="padding">Se vuoi diventare developer è l'unico strumento di cui hai bisogno.</p>
+
+    </section>
+
+    <!--seconda sezione dopo testimonianza-->
+    <section class="border margin-b">
+
+        <!--immagine sezione-->
+        <img class="w-img" src="/images/foto1.jpg" alt="computer su scrivania">
+
+        <!--titolo sezione-->
+        <h4 class="font-h4 bold blu">Il tuo pc</h4>
+
+        <!--paragrafo sezione-->
         <p class="padding">Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
 
     </section>
 
+    <!--terza sezione dopo testimonianza-->
     <section class="border margin-b">
-        <img class="w-img" src="/m1/w1/d5/progetto settimanale 27.10/images/foto3.jpg" alt="computer su scrivania">
 
+        <!--immagine sezione-->
+        <img class="w-img" src="/images/foto3.jpg" alt="computer in ufficio">
+
+        <!--titolo sezione-->
         <h4 class="font-h4 bold blu">Lavora subito</h4>
 
+        <!--paragrafo sezione-->
         <p class="padding">Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
 
     </section>
+    
+</main>
 
+    <!--inizio footer-->
     <footer id="background-footer">
 
-        <h2 id="contact" class="bianco bold">Contattaci</h2> <br>
+        <!--titolo footer-->
+        <h2 id="contact" class="bianco bold">Contattaci</h2>
 
+        <!--numero telefono footer-->
         <i class="fas fa-phone-alt bianco"></i>
         <a class="bianco" href="tel:(+39)11223456">(+39)11223456</a>
 
         <div id="d-block">
 
+        <!--e-mail footer-->
         <i class="fas fa-envelope bianco"></i>
         <a class="bianco" href="mailto:info@epicode.school">info@epicode.school</a>
 
@@ -130,6 +168,7 @@
 
         <div id="d-block2" class="margin-b">
 
+        <!--address nel footer-->
         <i class="fas fa-location-arrow bianco"></i>
         <address id="d-inline" class="bianco">Via Appia 1 - 00100 Roma</address>
     
@@ -140,9 +179,9 @@
         <div class="bianco">
             <p>&copy2021. Immagini di <a>Pixabay</a>.</p>
         </div>
+        <!--fine footer-->
 
     </footer>
 
- </main>
 </body>
 </html>
